# whisper.cpp

./: .pre-commit-config.yaml  Makefile  ggml.c  pyproject.toml  spaiche  whisper.cpp  whisper.h
bindings/javascript/: whisper.js
examples/main/: main.cpp
models/: convert-pt-to-ggml.py
